[package]
name = "cricket"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.24"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
openssl = "0.10"
clap = { version = "4.1", features = ["derive"] }
config = "0.13"
base64 = "0.13"
lazy_static = "1.5.0"
